Merge helper classes and fix build by updating shadowjar